--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,16 @@
 machine:
   node:
-    version: 6.2.1
+    version: 7
+
 dependencies:
   override:
-    - npm install
+    - yarn install
+  cache_directories:
+    - ~/.cache/yarn
+
 test:
   pre:
     - mkdir -p $CIRCLE_TEST_REPORTS/eslint
     - touch $CIRCLE_TEST_REPORTS/eslint/eslint.xml
   override:
-    - node node_modules/eslint/bin/eslint . -o $CIRCLE_TEST_REPORTS/eslint/eslint.xml -f junit
+    - yarn lint -- -o $CIRCLE_TEST_REPORTS/eslint/eslint.xml -f junit
