--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.3.0",
     "eslint-plugin-react": "^5.1.1"
+  },
+  "dependencies": {
+    "prop-types": "^15.6.0"
   }
 }
